--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -23,6 +23,6 @@ jobs:
         run: chmod +x gradlew
 
       - name: Build and Publish
-        run: ./gradlew createGitHubRelease
         env:
-          GITHUB_TOKEN: ${{ secrets.PUBLISH_TOKEN }}
+          PUBLISH_TOKEN: ${{ secrets.PUBLISH_TOKEN }}
+        run: ./gradlew createGitHubRelease
