--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -22,7 +22,14 @@ jobs:
       - name: Grant execute permission for gradlew
         run: chmod +x gradlew
 
-      - name: Build and Publish
-        env:
-          PUBLISH_TOKEN: ${{ secrets.PUBLISH_TOKEN }}
-        run: ./gradlew createGitHubRelease
+      - name: Extract version from tag
+        id: extract_version
+        run: |
+          VERSION_TAG=${GITHUB_REF#refs/tags/}
+          VERSION=${VERSION_TAG#v}
+          echo "##[set-output name=version;]$VERSION"
+
+          - name: Build and Publish
+            env:
+              PUBLISH_TOKEN: ${{ secrets.PUBLISH_TOKEN }}
+            run: ./gradlew createGitHubRelease -PreleaseVersion=${{ steps.extract_version.outputs.version }}
