--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -32,4 +32,5 @@ jobs:
       - name: Build and Publish
         env:
           PUBLISH_TOKEN: ${{ secrets.PUBLISH_TOKEN }}
-        run: ./gradlew createGitHubRelease -PreleaseVersion=${{ steps.extract_version.outputs.version }}
+        run:
+          ./gradlew createGitHubRelease -PreleaseVersion=${{ steps.extract_version.outputs.version }}
